# blog

./: .dprint.json  .en.utf-8.add  .gitignore  .prettierignore  .renovaterc.json  .yamllint.yaml  README.md  eslint.config.js  gulpfile.cjs  gulpfile.js  package-lock.json  package.json  pelicanconf.py  pyproject.toml  renovate.json  requirements.txt
.github/workflows/: check.yaml  publish.yaml
LICENSES/: MIT.txt
content/: .en.utf-8.add  first-post-at-the-pybelfast-workshop.md
content/001/: .en.utf-8.add  .en.utf-8.add.license  README.md
content/002/: .en.utf-8.add  README.md
content/003/: .en.utf-8.add  README.md
content/004/: .en.utf-8.add  README.md
content/005/: .en.utf-8.add  .gitignore  README.md  artillery.yaml  c1.conf.1  config.yaml
content/006/: .en.utf-8.add  README.md
content/007/: .en.utf-8.add  README.md
content/008/: .en.utf-8.add  README.md
content/009/: .en.utf-8.add  README.md
content/010/: .en.utf-8.add  README.md
content/011/: .en.utf-8.add  .gitignore  README.md
content/012/: .en.utf-8.add  .gitignore  README.md
content/013/: .en.utf-8.add  README.md
content/014/: .en.utf-8.add  README.md
content/015/: .gitignore  (+3 more)
custom/: LICENSE.txt  README.md
plugins/: .ruff.toml  custom_pygments_div.py  language_allow_list.py  remove_empty_spans.py  unicode_nbsp.py
src/: _base.css  _buttons.css  _colors.css  _layout.css  _media.css  _reset.css  _syntax.css  _tables.css  _typography.css  base.css  colors.css  copy.js  font-face-font-family.css  font.css  highlight.css  layout.css  main.css  media.css  syntax.css  tables.css  typography.css
theme/: .stylelintrc  .stylelintrc.json  README.md  gulpfile.cjs  gulpfile.js  package-lock.json  package.json
(+73 files in other folders)
