[project]
name = "blog"
version = "0.0.1"
requires-python = ">= 3.12"
dependencies = [
  "pelican[markdown]",
  "pelican-yaml-metadata",
  "djlint",
  "reuse",
  "yamllint",
]
authors = [
  { name = "Keith Maxwell", email = "keith.maxwell@gmail.com" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.djlint]
profile = "jinja"
indent = 2
max_line_length = 80
# https://djlint.com/docs/linter/
# H010 some links include mixed case query parameters (likely a djlint bug)
# H022 sometimes I want to serve http from localhost
ignore = "H010,H022"

# pyproject.toml
# Copyright 2024 Keith Maxwell
# SPDX-License-Identifier: CC0-1.0
